sort.basic.bubble.AlgBubbleSort3.scala.code
var compt:Int = 0;

def bubbleSort3() {
  
  
    
    
    for (i <- 0 to getNombreValeurs()-2){
      for (j <- 0 to getNombreValeurs() -2 -i){
        if (plusPetit(j,j+1)==false){
          echange(j,j+1)}
          
        else  {
          compt+=1;
        }
          
        if (getNombreValeur()-i-1 == compt){
          return;
        }  
        }
      }
    }
